--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Ruleta</string>
+    <string name="boton_menu_principal_ruleta">Jugar</string>
 </resources>
